# lounge-tui

./: Cargo.toml
.github/workflows/: ci.yml
locales/: en.toml  ru.toml
parser/: Cargo.toml
parser/src/: errors.rs  lib.rs
parser/src/schedules/: mod.rs
src/: config.rs  main.rs
src/requests/: grades.rs  lists.rs
src/requests/schedules/: additional.rs  mod.rs
src/tui/: grades.rs  mod.rs  schedules.rs  setup.rs
src/tui/themes/: monokai-pro.toml  monokai.toml
tui/: Cargo.toml
tui/locales/: en.yml  ru.yml
tui/src/: config.rs  grades.rs  logo.txt  main.rs  schedules.rs  setup.rs
tui/src/themes/: catpuccin-latte.toml  catpuccin-mocha.toml  monokai-pro.toml
