[package]
name = "lounge-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
regex = "1.12.2"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "http2",
  "json",
  "gzip",
  "brotli",
  "deflate",
  "charset"
]}
scraper = "0.24.0"
serde = "1.0.228"
serde_derive = "1.0.228"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
