[package]
name = "lounge-tui"
version = "0.1.0"
edition = "2024"

[package.metadata.i18n]
# The available locales for your application, default: ["en"].
available-locales = ["ru"]

# The default locale, default: "en".
default-locale = "ru"

# Path for your translations YAML file, default: "locales".
# This config for let `cargo i18n` command line tool know where to find your translations.
# You must keep this path same as the one you pass to method `rust_i18n::i18n!`.
load-path = "locales"

[profile.release]
strip = true
opt-level = "z"
lto = true

[dependencies]
chrono = "0.4.42"
confy = "2.0.0"
cursive = { version = "0.21.1", features = ["toml"]}
cursive-async-view = "0.8.0"
regex = "1.12.2"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "http2",
  "json",
  "gzip",
  "brotli",
  "deflate",
  "charset"
]}
scraper = "0.24.0"
serde = "1.0.228"
serde_derive = "1.0.228"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
open = "5.3.2"
cursive_calendar_view = "0.9.0"
rust-i18n = "3.1.5"
lounge-parser = { path = "../parser" }